# live-libreoffice-python

./: .gitignore  README.md  nohup.out  pyproject.toml
.devcontainer/: .env  Dockerfile  Dockerfile.lo  devcontainer.json  docker-compose.yml  startup.sh
.devcontainer/app_mode/: Dockerfile  devcontainer.json  docker-compose.yml  startup.sh
.devcontainer/app_mode/local_res/req/: requirements.txt
.devcontainer/app_mode/root/defaults/: autostart
.devcontainer/macro_mode/: Dockerfile  Dockerfile.lo  devcontainer.json  docker-compose.yml  startup_lo.sh
.devcontainer/res/defaults/: registrymodifications.xcu
.devcontainer/res/req/: README.md  requirements.txt  sample_requirements.txt
.devcontainer/res/scripts/: ext.sh  lo_console.py  reload.sh  unlock  unlock.sh
.devcontainer/root/: rc.sh
.github/workflows/: python-app-test.yml
Documents/: Hello World.odt  Hello World2.odt
app/: hello.py
examples/calc/build_table/: Makefile  README.md  config.json
examples/calc/odev_add_range_data/: Makefile  README.md
examples/calc/sudoku/: Makefile  README.md
examples/odev_add_range_data/: README.md
macro/: dbs.py  ooodev_ex.py
src/macros/: ooodev_ex.py
tmp/: runner.py
